WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301510
[CSS @starting-style] entry animation is only respected on first transition
https://bugs.webkit.org/show_bug.cgi?id=301510
Summary
[CSS @starting-style] entry animation is only respected on first transition
jh3yyy
Reported
2025-10-27 06:39:15 PDT
hey there, raising this off of another one raised last week i've noticed that @starting-style entry/exit transitions aren't being respected as expected. not sure if this is a regression as i haven't seen this happen before (much like the issue i had with showing the non-modal dialog in the other issue i filed) Steps to Reproduce: 1. open the demo:
https://codepen.io/jh3y/pen/RNrJEbw/b560906a4c78fda2f390fec86878e56f
2. open the dialog, note how the transform-origin is respected on the transition 3. close the dialog, note how it's a different transition 4. reopen the dialog, notice how the entry transition is now ignored and the exit is being reversed instead Actual Results: – entry transition is only respected on first play through Expected Results: – the entry and exit transitions should be respected on each playthrough
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-10-27 08:50:41 PDT
Thank you for the report, I can reproduce with STP 230.
> not sure if this is a regression as i haven't seen this happen before
Could you please elaborate? The dialog appears to be anchor-positioned, so the test relies on a new feature in Safari 26. Are you using a newer build, and unsure if this is a regression since Safari 26?
jh3yyy
Comment 2
2025-10-27 09:03:02 PDT
(In reply to Alexey Proskuryakov from
comment #1
)
> Thank you for the report, I can reproduce with STP 230. > > > not sure if this is a regression as i haven't seen this happen before > > Could you please elaborate? The dialog appears to be anchor-positioned, so > the test relies on a new feature in Safari 26. Are you using a newer build, > and unsure if this is a regression since Safari 26?
i figured this issue was related to @starting-style and i'm sure that's been around since before v 26 unless this is specific to the way dialog behaves? i was using popovers previous to this 🙏
Radar WebKit Bug Importer
Comment 3
2025-11-03 05:40:12 PST
<
rdar://problem/163928932
>
Antoine Quint
Comment 4
2025-11-03 09:40:56 PST
This is likely going to be a similar issue or a duplicate of
bug 301461
. I expect this is only happening with anchor positioning and starting style mixed together.
Kiet Ho
Comment 5
2025-11-03 16:07:01 PST
Might be fixed by
bug 301461
.
Kiet Ho
Comment 6
2025-11-04 05:07:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53392
EWS
Comment 7
2026-01-09 11:07:56 PST
Committed
305371@main
(d9149b628100): <
https://commits.webkit.org/305371@main
> Reviewed commits have been landed. Closing PR #53392 and removing active labels.
Kiet Ho
Comment 8
2026-04-02 15:51:23 PDT
***
Bug 301070
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug