[CSS @starting-style] entry animation is only respected on first transition rdar://163928932 https://bugs.webkit.org/show_bug.cgi?id=301510

Reviewed by NOBODY (OOPS!).

Fixed some issues with the interaction between CSS animations/transitions and
anchor positioning:

* The style to be saved when deferring updating/applying animations should also
  be the starting style, in addition to the previous render style.
* Updating/applying animations should be deferred until a position option is
  chosen.

No new tests (OOPS!).
* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/after-change-style-inherited-try-fallback-expected.txt:
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::createAnimatedElementUpdate):
(WebCore::Style::TreeResolver::resolve):
(WebCore::Style::TreeResolver::saveBeforeResolutionStyleForInterleaving):
(WebCore::Style::TreeResolver::isTryingPositionOption const):
* Source/WebCore/style/StyleTreeResolver.h: